# firmware-studio

./: README.md
firmware/: CMakeLists.txt
firmware/configuration/interface/: compile_options.cmake  include_directories.cmake  link_options.cmake
firmware/configuration/toolchain/: arm-none-eabi.cmake
firmware/declaration/firmware/: compiler.h
firmware/declaration/firmware/kernel/: initialization.h
firmware/implementation/: CMakeLists.txt  main.c
firmware/implementation/architecture/: CMakeLists.txt
firmware/implementation/architecture/armv8m/: CMakeLists.txt  exception_vector.c  vector_table.c
firmware/implementation/architecture/armv8m/declaration/: exception_vector.h
firmware/implementation/kernel/: CMakeLists.txt  initialization.c
firmware/implementation/microcontroller/: CMakeLists.txt
firmware/implementation/microcontroller/rp2350/: CMakeLists.txt  image_def.c  linker.ld
firmware/implementation/microcontroller/rp2350/declaration/register/: clocks.h  io_bank0.h  pads_bank0.h  resets.h  sio.h  uart.h  xosc.h
firmware/verification/: CMakeLists.txt
